# imprint

./: Cargo.toml  FORMAT.md  LICENSE  README.md
.github/workflows/: ci.yml
benches/: Cargo.toml  build.rs
benches/proto/: test_record.proto
benches/src/: mock_data.rs  serialization.rs  types.rs
proptest-regressions/: serde.txt
src/: error.rs  lib.rs  ops.rs  serde.rs  types.rs  varint.rs  writer.rs
